--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,16 @@
 ---
-name: Tails Azimuth
-avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+name: Shaheer Mansoor
+avatar: /static/images/my-image.webp
+occupation: MERN(including NEXTJS) Stack Developer
+# company: Stanford University
+email: shaheermansoor321@gmail.com
+twitter: https://twitter.com/Twitter/ShaheerMansoor2
+linkedin: https://www.linkedin.com/in/shaheer-mansoor-2092631a6/
+github: https://github.com/Shaheer5
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+Shaheer Mansoor is a skilled MERN (MongoDB, Express.js, React.js, Node.js) Stack Developer with expertise in NEXT.js. With a passion for crafting efficient and user-friendly web applications, Shaheer brings a wealth of experience to every project he undertakes.
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+His strong command over the MERN stack combined with his proficiency in NEXT.js allows him to create dynamic and responsive web applications that meet the needs of clients and users alike.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+Shaheer is dedicated to staying updated with the latest technologies and best practices in web development, ensuring that his projects are always at the forefront of innovation.
