update to latest blog

--- a/data/blog/intermittent vs muslim fasting/intermittent-vs-muslim-fasting.mdx
+++ b/data/blog/intermittent vs muslim fasting/intermittent-vs-muslim-fasting.mdx
@@ -2,18 +2,16 @@
 title: 'Intermittent or Islamic fasting, which one is for you?'
 date: '2024-5-18'
 lastmod: '2024-5-18'
-tags: ['fasting', 'islamic', 'guide']
+tags: ['fasting', 'islamic', 'life-style']
 draft: false
 summary: 'Fasting helped me shed 9kg, transforming my health and mindset, which fasting method suits you best? Learn practices that teach discipline, self-control, and the deep connection between body and soul.'
 images: ['/static/images/canada/mountains.jpg', '/static/images/canada/toronto.jpg']
 authors: ['default']
 ---
 
-# Intermittent or Islamic fasting, which one is for you?
-
 <TOCInline toc={props.toc} asDisclosure />
 
-## What is Intermittent Fasting?
+# What is Intermittent Fasting?
 
 Intermittent fasting (IF) is an eating pattern that cycles between periods of fasting and eating. It primarily focuses on when you eat rather than what you eat, with common methods including the 16/8 method (16 hours fasting, 8 hours eating) and the 5:2 method (normal eating for five days, restricted calories for two days). IF aims to improve metabolic health and promote weight loss.
 
