--- a/data/blog/angular 18/angular-18.mdx
+++ b/data/blog/angular 18/angular-18.mdx
@@ -34,7 +34,8 @@ Now, they are thrilled to announce the introduction of the first experimental AP
 
 Developers can now explore the experimental zoneless support in Angular, which marks a significant step towards overcoming the limitations associated with zone.js.
 
-To get started with this experimental feature, developers can simply add `provideExperimentalZonelessChangeDetection` to their application bootstrap process:
+To get started with this experimental feature, developers can simply add `provideExperimental
+ZonelessChangeDetection` to their application bootstrap process:
 
 ```ts:
     bootstrapApplication(App, {
