modify blog post 'stop using style in react', and replace PNG images with WebP format"

--- a/data/blog/angular 18/angular-18.mdx
+++ b/data/blog/angular 18/angular-18.mdx
@@ -14,7 +14,7 @@ authors: ['default']
 
 In the latest update from the Angular team. Building on the foundation of the past three releases, Angular has introduced a host of new features and improvements. This time around, their focus has been on refining existing work by graduating many new APIs to stable status, addressing common developer requests, and experimentally releasing one of the most sought-after roadmap projects: zoneless change detection.
 
-![](https://cdn-images-1.medium.com/max/3200/0*lkpgKWc22o4uaJJ4)
+![Angular v18](https://cdn-images-1.medium.com/max/3200/0*lkpgKWc22o4uaJJ4)
 
 In this latest release, Angular brings forth several notable highlights:
 
@@ -216,7 +216,7 @@ With the increasing complexity of the web platform, the hosting of applications 
 
 Firebase [introduced App Hosting](https://www.youtube.com/watch?v=qyhdKb8liEA) at Google I/O this year. This service streamlines the development and deployment of dynamic Angular applications by offering built-in framework support, GitHub integration, and seamless integration with other Firebase products such as Authentication, Cloud Firestore, and Vertex AI for Firebase.
 
-![](https://cdn-images-1.medium.com/max/2000/0*pVSXWSXPpuWuqySc)
+![Angular v18](https://cdn-images-1.medium.com/max/2000/0*pVSXWSXPpuWuqySc)
 
 Angular has been collaborating with Firebase for nearly a year to ensure a smooth developer experience. Developers can check out their [quickstart](https://firebase.google.com/docs/app-hosting/get-started) to begin using App Hosting from now on.
 
