--- a/data/blog/stop using style in react/stop-using-style-in-react.mdx
+++ b/data/blog/stop using style in react/stop-using-style-in-react.mdx
@@ -35,11 +35,14 @@ CSS modules offer a powerful solution to keeping styles in sync with components 
 
 Styled components allow writing CSS in JavaScript, enabling the utilization of CSS features like media queries and nesting. They prove essential for conditionally applying styles and maintaining a consistent design system.
 
+Here is an example of pre-made styled component
+[material-tailwind](https://www.material-tailwind.com/docs/react/button)
+
 ### Hate it or Love it ft. Tailwind CSS
 
 Tailwind CSS, a customizable UI tool gaining popularity, offers predefined classes for easy styling in components. While the learning curve may be steep initially, the benefits of Tailwind are undeniable and worth exploring.
 
-One could argue that both inline CSS and tailwind CSS bloats HTML. Well you are right but tailwind does not bloats HTML code to much like:
+One could argue that both inline CSS and tailwind CSS bloat HTML. Well you are right but tailwind does not bloats HTML code to much like:
 
 ```html:inline-css
   <div
@@ -66,9 +69,9 @@ One could argue that both inline CSS and tailwind CSS bloats HTML. Well you are 
 **WELL YOU CAN SEE👀 TAILWIND BLOATS LESS XD**
 
 Here is the component library of Tailwind CSS
-
 [tailwind-component-library](https://tailwindui.com/?ref=top)
-![tailwind-component-library](/static/images/blog-images/tailwind-component-library.png)
+
+![tailwind-component-library](/static/images/blog-images/tailwind-component-library.webp)
 
 ### Superior Developer Experience with Alternatives
 
@@ -86,6 +89,6 @@ There is an extension called Inline Fold for VSCode, that hide classes that bloa
 
 Here is an example:
 
-![inline-fold-explaination](/static/images/blog-images/inline-fold-explaination.png)
+![inline-fold-explaination](/static/images/blog-images/inline-fold-explaination.webp)
 
 Thanks you so much for reading {'<3'}
