update: pwa-with-nextjs

--- a/data/blog/angular 18/angular-18.mdx
+++ b/data/blog/angular 18/angular-18.mdx
@@ -312,4 +312,4 @@ This Article is inspired by [Minko Gechev](https://medium.com/@mgechev), Product
 
 To get deeper insights. Here is the link to his [article](https://medium.com/angular-blog/angular-v18-is-now-available-e79d5ac0affe).
 
-Thanks you so much for reading {'<3'}
+Thank you so much for reading {'<3'}
