--- a/data/blog/nextjs 15/nextjs-15.mdx
+++ b/data/blog/nextjs 15/nextjs-15.mdx
@@ -215,4 +215,4 @@ module.exports = nextConfig;
 - For more details and other minor changes, refer to the [Next.js 15 Vercel Article](https://nextjs.org/blog/next-15-rc).
 - Upgrade Guide [How to upgrade to Next 15](https://rc.nextjs.org/docs/app/building-your-application/upgrading)
 
-Thanks you so much for reading {'<3'}
+Thank you so much for reading {'<3'}
