--- a/data/blog/pwa with nextjs/pwa-with-nextjs.mdx
+++ b/data/blog/pwa with nextjs/pwa-with-nextjs.mdx
@@ -16,6 +16,8 @@ authors: ['default']
 
 # Creating PWA With Next.js
 
+  ![PWA with NextJS](/static/images/blog-images/pwa-with-nexjs-thumbnail.webp)
+
 <TOCInline toc={props.toc} asDisclosure exclude={'Creating PWA With Next.js'} />
 
 ## What is PWA?
@@ -237,4 +239,4 @@ In development, you can disable PWA because it gives a lot of console messages.
   });
 ```
 
-Thanks you so much for reading {'<3'}
+Thank you so much for reading {'<3'}
