--- a/data/blog/threejs-shirt.mdx
+++ b/data/blog/threejs-shirt.mdx
@@ -8,7 +8,7 @@ summary: Create your unique and exclusive shirt with our brand new 3D customizat
 
 <TOCInline toc={props.toc} exclude="Introduction" />
 
-# The Time Machine by H. G. Wells
+# ThreeJS Customizable Shirt by Shaheer Mansoor 
 
 _Title_: ThreeJS Customizable Shirt
 
