"Update last paragraph of threejs-shirt.mdx blog post"

--- a/data/blog/threejs-shirt.mdx
+++ b/data/blog/threejs-shirt.mdx
@@ -8,7 +8,7 @@ summary: Create your unique and exclusive shirt with our brand new 3D customizat
 
 <TOCInline toc={props.toc} exclude="Introduction" />
 
-# ThreeJS Customizable Shirt by Shaheer Mansoor 
+# ThreeJS Customizable Shirt by Shaheer Mansoor
 
 _Title_: ThreeJS Customizable Shirt
 
@@ -69,4 +69,4 @@ After customizing shirt according to your liking, you can hit download button to
 I will be adding saving shirt design by storing them in localstorage.
 Also adding AI chat prompt for generating designs for shirt.
 
-Thank you so much for reading {'<3'}
+Thank you so much for reading {'<3'} and Enjoy playing with it.
