add horizon banking project post

--- a/data/blog/stop using style in react/stop-using-style-in-react.mdx
+++ b/data/blog/stop using style in react/stop-using-style-in-react.mdx
@@ -94,4 +94,4 @@ Here is an example:
 
 ![inline-fold-explaination](/static/images/blog-images/inline-fold-explaination.webp)
 
-Thanks you so much for reading {'<3'}
+Thank you so much for reading {'<3'}
