--- a/data/blog/apple-iphone15-clone/apple-iphone15-clone.mdx
+++ b/data/blog/apple-iphone15-clone/apple-iphone15-clone.mdx
@@ -68,3 +68,5 @@ npm run dev
 ```
 
 Open [http://localhost:5173](http://localhost:5173) in your browser to view the project.
+
+Thank you so much for reading {'<3'}.
