update in horizon banking project

--- a/data/blog/horizon-banking.mdx
+++ b/data/blog/horizon-banking.mdx
@@ -6,9 +6,7 @@ draft: false
 summary: Built with Next.js, Horizon is a financial SaaS platform that connects to multiple bank accounts, displays transactions in real-time, allows users to transfer money to other platform users...
 ---
 
-<TOCInline toc={props.toc} exclude="Introduction" />
-
-# ThreeJS Customizable Shirt by Shaheer Mansoor
+# Horizon Banking by Shaheer Mansoor
 
 _Title_: Horizon Banking - With Finance Management
 
@@ -18,13 +16,17 @@ _Subject_: Banking App/Finance
 
 _Language_: English
 
-_Live Preview_: [Visit Live Website](https://sm-banking.vercel.app//)
+_Live Preview_: [Visit Live Website](https://sm-banking.vercel.app)
 
-_Source Code_: [Github Repository](https://github.com/Shaheer5/threejs-shirt)
+_Source Code_: [Github Repository](https://github.com/Shaheer5/sm-banking)
+
+<TOCInline toc={props.toc} exclude="Introduction" />
 
 ## Introduction
 
-A banking🏦 app with finance 💰 management.
+A banking 🏦 app with finance 💰 management.
+
+![horizon banking homepage](/static/images/projects/horizon-banking-homepage.png)
 
 Built with Next.js, Horizon is a financial SaaS platform that connects to multiple bank accounts, displays transactions in real-time, allows users to transfer money to other platform users, and manages their finances altogether.
 
@@ -45,19 +47,33 @@ Built with Next.js, Horizon is a financial SaaS platform that connects to multip
 
 👉 Authentication: An ultra-secure SSR authentication with proper validations and authorization
 
+![horizon banking signup page](/static/images/projects/horizon-banking-signup-page.png)
+
 👉 Connect Banks: Integrates with Plaid for multiple bank account linking
+
+![horizon banking add new bank](/static/images/projects/horizon-banking-add-bank.png)
 
 👉 Home Page: Shows general overview of user account with total balance from all connected banks, recent transactions, money spent on different categories, etc
 
+👉 Real-time Updates: Reflects changes across all relevant pages upon connecting new bank accounts.
+
+![horizon banking homepage](/static/images/projects/horizon-banking-homepage.png)
+
 👉 My Banks: Check the complete list of all connected banks with respective balances, account details
+
+![horizon banking my banks page](/static/images/projects/horizon-banking-mybankspage.png)
 
 👉 Transaction History: Includes pagination and filtering options for viewing transaction history of different banks
 
-👉 Real-time Updates: Reflects changes across all relevant pages upon connecting new bank accounts.
+![horizon banking transactions history](/static/images/projects/horizon-banking-transaction-historypage.png)
 
 👉 Funds Transfer: Allows users to transfer funds using Dwolla to other accounts with required fields and recipient bank ID.
 
+![horizon banking transferpage](/static/images/projects/horizon-banking-transferpage.png)
+
 👉 Responsiveness: Ensures the application adapts seamlessly to various screen sizes and devices, providing a consistent user experience across desktop, tablet, and mobile platforms.
+
+![horizon banking mobile homepage](/static/images/projects/horizon-bank-mobile-homepage.png)
 
 and many more, including code architecture and reusability.
 
