Update num of pages, layout.tsx, add react-type-animation, update blog titles

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -5,7 +5,7 @@ occupation: MERN(including NEXTJS) Stack Developer
 # company: Stanford University
 email: shaheermansoor321@gmail.com
 twitter: https://twitter.com/Twitter/ShaheerMansoor2
-linkedin: https://www.linkedin.com/in/shaheer-mansoor-2092631a6/
+linkedin: https://www.linkedin.com/in/shaheer-mansoor/
 github: https://github.com/Shaheer5
 ---
 
