--- a/data/blog/angular-18.mdx
+++ b/data/blog/angular-18.mdx
@@ -8,9 +8,9 @@ summary: 'In the latest update from the Angular team. Building on the foundation
 authors: ['default']
 ---
 
-## Angular v18 is now available!
+<TOCInline toc={props.toc} asDisclosure />
 
-<TOCInline toc={props.toc} asDisclosure exclude={'Angular v18 is now available!'} />
+## Introduction
 
 In the latest update from the Angular team. Building on the foundation of the past three releases, Angular has introduced a host of new features and improvements. This time around, their focus has been on refining existing work by graduating many new APIs to stable status, addressing common developer requests, and experimentally releasing one of the most sought-after roadmap projects: zoneless change detection.
 
