--- a/data/blog/apple-iphone15-clone.mdx
+++ b/data/blog/apple-iphone15-clone.mdx
@@ -6,7 +6,7 @@ draft: false
 summary: 1:1 Apple iPhone 15 Pro Webpage clone, powered by Three.JS, GSAP for smooth animations and all the design saved by Tailwind CSS...
 ---
 
-<TOCInline toc={props.toc} exclude="Introduction" />
+<TOCInline toc={props.toc} exclude="Introduction" asDisclosure />
 
 ## 🤖 Introduction
 
