--- a/data/blog/horizon-banking.mdx
+++ b/data/blog/horizon-banking.mdx
@@ -6,8 +6,6 @@ draft: false
 summary: Built with Next.js, Horizon is a financial SaaS platform that connects to multiple bank accounts, displays transactions in real-time, allows users to transfer money to other platform users...
 ---
 
-# Horizon Banking by Shaheer Mansoor
-
 _Title_: Horizon Banking - With Finance Management
 
 _Author_: Shaheer Mansoor
@@ -20,7 +18,7 @@ _Live Preview_: [Visit Live Website](https://sm-banking.vercel.app)
 
 _Source Code_: [Github Repository](https://github.com/Shaheer5/sm-banking)
 
-<TOCInline toc={props.toc} exclude="Introduction" />
+<TOCInline toc={props.toc} asDisclosure />
 
 ## Introduction
 
