--- a/data/blog/nextjs-15.mdx
+++ b/data/blog/nextjs-15.mdx
@@ -14,13 +14,7 @@ images:
 authors: ['default']
 ---
 
-# Next.js 15 Release Candidate: New Features and Enhancements
-
-<TOCInline
-  toc={props.toc}
-  asDisclosure
-  exclude={'Next.js 15 Release Candidate: New Features and Enhancements'}
-/>
+<TOCInline toc={props.toc} asDisclosure />
 
 ## Key Highlights
 
