--- a/data/blog/side-hustle-as-software-engineer.mdx
+++ b/data/blog/side-hustle-as-software-engineer.mdx
@@ -15,15 +15,9 @@ images:
 authors: ['default']
 ---
 
-# The Most Overlooked Power of Software Engineers
-
 ![Side hustle as a software engineer](/static/images/blog-images/side-hustle-cover.webp)
 
-<TOCInline
-  toc={props.toc}
-  asDisclosure
-  exclude={'The Most Overlooked Power of Software Engineers'}
-/>
+<TOCInline toc={props.toc} asDisclosure />
 
 ## Introduction
 
