--- a/data/blog/threejs-shirt.mdx
+++ b/data/blog/threejs-shirt.mdx
@@ -6,10 +6,6 @@ draft: false
 summary: Create your unique and exclusive shirt with our brand new 3D customization tool. Convert Imagination to Reality and define your own style...
 ---
 
-<TOCInline toc={props.toc} exclude="Introduction" />
-
-# ThreeJS Customizable Shirt by Shaheer Mansoor
-
 _Title_: ThreeJS Customizable Shirt
 
 _Author_: Shaheer Mansoor
@@ -21,6 +17,8 @@ _Language_: English
 _Live Preview_: [Visit Live Website](https://threejs-sm.netlify.app/)
 
 _Source Code_: [Github Repository](https://github.com/Shaheer5/threejs-shirt)
+
+<TOCInline toc={props.toc} asDisclosure />
 
 ## Introduction
 
