add blog images to show in blog list

--- a/data/blog/apple-iphone15-clone.mdx
+++ b/data/blog/apple-iphone15-clone.mdx
@@ -3,12 +3,15 @@ title: 'Apple Website Clone - iPhone 15 Pro'
 date: '2024-07-15'
 tags: ['ThreeJS', 'React', 'Projects']
 draft: false
+images: ['/static/images/projects/apple-website-iphone15-live.png']
 summary: 1:1 Apple iPhone 15 Pro Webpage clone, powered by Three.JS, GSAP for smooth animations and all the design saved by Tailwind CSS...
 ---
 
 <TOCInline toc={props.toc} exclude="Introduction" asDisclosure />
 
 ## 🤖 Introduction
+
+![15 Pro webpage](/static/images/projects/apple-website-iphone15-live.png)
 
 This is a clone of Apple's iPhone 15 Pro website using React.js and TailwindCSS. It highlights the effective use of GSAP (Greensock Animations) and Three.js for displaying iPhone 15 Pro models in various colors and shapes.
 
