--- a/data/blog/horizon-banking.mdx
+++ b/data/blog/horizon-banking.mdx
@@ -3,6 +3,16 @@ title: 'Horizon Banking - With Finance Management'
 date: '2024-08-06'
 tags: ['Next-JS', 'Projects', 'TypeScript']
 draft: false
+images:
+  [
+    '/static/images/projects/horizon-banking-homepage.png',
+    '/static/images/projects/horizon-banking-signup-page.png',
+    '/static/images/projects/horizon-banking-add-bank.png',
+    '/static/images/projects/horizon-bank-mobile-homepage.png',
+    '/static/images/projects/horizon-banking-transferpage.png',
+    '/static/images/projects/horizon-banking-transaction-historypage.png',
+    '/static/images/projects/horizon-banking-mybankspage.png',
+  ]
 summary: Built with Next.js, Horizon is a financial SaaS platform that connects to multiple bank accounts, displays transactions in real-time, allows users to transfer money to other platform users...
 ---
 
