--- a/data/blog/threejs-shirt.mdx
+++ b/data/blog/threejs-shirt.mdx
@@ -3,6 +3,15 @@ title: 'ThreeJS Customizable Shirt'
 date: '2024-07-08'
 tags: ['ThreeJS', 'React', 'Projects']
 draft: false
+images:
+  [
+    '/static/images/projects/threejs-shirt-live.png',
+    '/static/images/blog-images/shirt-color-wheel.png',
+    '/static/images/blog-images/shirt-upload-file.png',
+    '/static/images/blog-images/shirt-download.png',
+    '/static/images/blog-images/shirt-toggle-full.png',
+    '/static/images/blog-images/shirt-toggle-logo.png',
+  ]
 summary: Create your unique and exclusive shirt with our brand new 3D customization tool. Convert Imagination to Reality and define your own style...
 ---
 
