--- a/data/blog/angular-18.mdx
+++ b/data/blog/angular-18.mdx
@@ -4,6 +4,13 @@ date: '2024-5-26'
 lastmod: '2024-5-26'
 tags: ['angular', 'guide', 'feature']
 draft: false
+images:
+  [
+    '/static/images/blog-images/angular-18.webp',
+    'https://cdn-images-1.medium.com/max/2186/0*jLKc9qAJotWNTm84',
+    'https://cdn-images-1.medium.com/max/2518/0*OlnYusOQcKfdRQ7u',
+    'https://cdn-images-1.medium.com/max/2000/0*pVSXWSXPpuWuqySc',
+  ]
 summary: 'In the latest update from the Angular team. Building on the foundation of the past three releases, Angular has introduced a host of new features and improvements.'
 authors: ['default']
 ---
@@ -14,7 +21,7 @@ authors: ['default']
 
 In the latest update from the Angular team. Building on the foundation of the past three releases, Angular has introduced a host of new features and improvements. This time around, their focus has been on refining existing work by graduating many new APIs to stable status, addressing common developer requests, and experimentally releasing one of the most sought-after roadmap projects: zoneless change detection.
 
-![Angular v18](https://cdn-images-1.medium.com/max/3200/0*lkpgKWc22o4uaJJ4)
+![Angular v18](/static/images/blog-images/angular-18.webp)
 
 In this latest release, Angular brings forth several notable highlights:
 
