--- a/data/blog/deriving-ols-estimator.mdx
+++ b/data/blog/deriving-ols-estimator.mdx
@@ -3,10 +3,13 @@ title: Deriving the OLS Estimator
 date: '2020-12-21'
 tags: ['next js', 'math', 'ols']
 draft: false
+images: ['/static/images/blog-images/calculating-analytics.webp']
 summary: 'How to derive the OLS Estimator with matrix notation and a tour of math typesetting using markdown with the help of KaTeX.'
 ---
 
 # Introduction
+
+![Calculating Analytics](/static/images/blog-images/calculating-analytics.webp)
 
 Parsing and display of math equations is included in this blog template. Parsing of math is enabled by `remark-math` and `rehype-katex`.
 KaTeX and its associated font is included in `_document.js` so feel free to use it on any page.
