--- a/data/blog/github-markdown-guide.mdx
+++ b/data/blog/github-markdown-guide.mdx
@@ -3,10 +3,13 @@ title: 'Markdown Guide'
 date: '2019-10-11'
 tags: ['github', 'guide']
 draft: false
+images: ['/static/images/blog-images/mdx-logo.png']
 summary: 'Markdown cheatsheet for all your blogging needs - headers, lists, images, tables and more! An illustrated guide based on GitHub Flavored Markdown.'
 ---
 
 # Introduction
+
+![MDX Markdown Logo](/static/images/blog-images/mdx-logo.png)
 
 Markdown and Mdx parsing is supported via `unified`, and other remark and rehype packages. `next-mdx-remote` allows us to parse `.mdx` and `.md` files in a more flexible manner without touching webpack.
 
