update: ui change accross all app

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,7 +1,7 @@
 ---
 name: Shaheer Mansoor
 avatar: /static/images/my-image.webp
-occupation: MERN(including NEXTJS) Stack Developer
+occupation: Full Stack Developer (MERN)
 # company: Stanford University
 email: shaheermansoor321@gmail.com
 twitter: https://twitter.com/Twitter/ShaheerMansoor2
