update: apple iphone project to show live website links

--- a/data/blog/apple-iphone15-clone.mdx
+++ b/data/blog/apple-iphone15-clone.mdx
@@ -7,6 +7,18 @@ images: ['/static/images/projects/apple-website-iphone15-live.png']
 summary: 1:1 Apple iPhone 15 Pro Webpage clone, powered by Three.JS, GSAP for smooth animations and all the design saved by Tailwind CSS...
 ---
 
+_Title_: iPhone 15 Pro Max - Webpage Clone
+
+_Author_: Shaheer Mansoor
+
+_Subject_: 3D Web World
+
+_Language_: English
+
+_Live Preview_: [Visit Live Website](https://shaheer-apple-clone.netlify.app/)
+
+_Source Code_: [Github Repository](https://github.com/Shaheer5/apple-website-clone)
+
 <TOCInline toc={props.toc} exclude="Introduction" asDisclosure />
 
 ## 🤖 Introduction
