add new project in portfolio zentry game and update brainwave mdx

--- a/data/blog/brainwave.mdx
+++ b/data/blog/brainwave.mdx
@@ -2,12 +2,12 @@
 title: 'Brainwave - Modern UI/UX website'
 date: '2024-12-29'
 tags: ['React', 'Projects', 'Tailwind']
-draft: false
+draft: true
 images: ['/static/images/projects/brainwave-banner.png']
 summary: Brainwave - Modern UI/UX website, developed using React.js and Tailwind CSS, exemplifies modern UI/UX principles. Its sleek design, seamless animations, and overall user experience...
 ---
 
-![YC Directory Banner](/static/images/projects/brainwave-banner.png)
+![Brainwave Banner](/static/images/projects/brainwave-banner.png)
 
 _Title_: Brainwave - Modern UI/UX website
 
@@ -52,10 +52,6 @@ and many more, including code architecture and reusability.
 ## 🤸 Quick Start
 
 Follow these steps to set up the project locally on your machine.
-
-**Prerequisites**
-
-Make sure you have the following installed on your machine:
 
 **Prerequisites**
 
