set 2 projects draft to false.

--- a/data/blog/zentry-game.mdx
+++ b/data/blog/zentry-game.mdx
@@ -2,7 +2,7 @@
 title: 'Brainwave - Modern UI/UX website'
 date: '2024-12-31'
 tags: ['React', 'Projects', 'GSAP', 'Tailwind']
-draft: true
+draft: false
 images: ['/static/images/projects/zentry-game-banner.png']
 summary: Zentry pioneers the Metagame, a Game of Games ecosystem where worlds converge and communities connect, building the foundation for what will soon become the largest...
 ---
