--- a/data/blog/brainwave.mdx
+++ b/data/blog/brainwave.mdx
@@ -2,7 +2,7 @@
 title: 'Brainwave - Modern UI/UX website'
 date: '2024-12-29'
 tags: ['React', 'Projects', 'Tailwind']
-draft: true
+draft: false
 images: ['/static/images/projects/brainwave-banner.png']
 summary: Brainwave - Modern UI/UX website, developed using React.js and Tailwind CSS, exemplifies modern UI/UX principles. Its sleek design, seamless animations, and overall user experience...
 ---
